--- a/divPuzzle/index.html
+++ b/divPuzzle/index.html
@@ -9,17 +9,17 @@
 <body>
     <div class="header">
         <div class="block-white">
-            <div class="block-purple1"></div>
-            <div class="block-purple2"></div>
-            <div class="block-purple3"></div>
+            <div class="block-purple-left"></div>
+            <div class="block-purple-center"></div>
+            <div class="block-purple-right"></div>
         </div>
     </div> 
     <div class="container">
         <div class="block-green"></div>
         <div class="block-blue">
-            <div class="block-orange1"></div>
-            <div class="block-orange2"></div>
-            <div class="block-orange3"></div>
+            <div class="block-orange-top"></div>
+            <div class="block-orange-center"></div>
+            <div class="block-orange-bottom"></div>
         </div>
     </div>
     <div class="footer">
